# present

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
cpp/: Encryption_8bit.inc  Makefile  present.cpp  present.gp  present.h  present_bitsliced.c  present_bitsliced.h  statistics_helper.cpp  test.cpp
py/: present.py
src/: checks.cpp  cmdline.c  cmdline.ggo  cmdline.h  keyschedule.h  lib.rs  linc.rs  main.cpp  main.rs  present.cpp  present.rs  present_bitslice.c  present_bitslice.h  sbox.rs
tests/: lib.rs  present.rs
