[package]
name = "present"
version = "0.0.1"
authors = ["Friedrich Wiemer <friedrich.wiemer@rub.de>"]
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/pfasante/present"
description = "Collection of Linear Cryptanalysis functions and example implementation for the PRESENT block chipher"

[dependencies]
num = "*"

[dependencies.generic-matrix]
git = "https://github.com/pfasante/generic-matrix-rs.git"

[lib]
name = "linc"
path = "src/linc.rs"

[[bin]]
name = "present"
path = "src/main.rs"

